--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Zhibul-Alexander/Node-file-manager/issues"
   },
-  "homepage": "https://github.com/Zhibul-Alexander/Node-file-manager#readme"
+  "homepage": "https://github.com/Zhibul-Alexander/Node-file-manager#readme",
+  "dependencies": {
+    "process": "^0.11.10"
+  }
 }
